# vkd

./: .gitignore  .gitmodules  README.md  newclass.py
SDL2/lib/Debug/: SDL2d.exp  SDL2d.lib
SDL2/lib/RelWithDebInfo/: SDL2.exp
SDL2/lib/Release/: SDL2-static.lib  SDL2.exp  SDL2main.lib
cmake/: CMakeLists.txt
data/: .gitattributes  DSCF1946.RAF  DSCF1956.RAF
docs/: negative.md
include/: CLI11.hpp
shaders/: CMakeLists.txt
shaders/compute/: averages.comp  averages_clone_channel.comp  bilateral.comp  blank.comp  cdl.comp  constant.comp  crop.comp  exp_image.comp  exposure.comp  gaussian_horiz.comp  gaussian_vert.comp  half_buffer_to_image.comp  image_to_half_buffer.comp  image_to_uint8_rgb_buffer.comp  image_to_uint8_rgba_buffer.comp  image_to_uint8_rgbx_buffer.comp  invert.comp  libraw_short.comp  log_image.comp  median.comp  merge.comp  r16_buffer_to_image.comp  r8_buffer_to_image.comp  rgb16_buffer_to_image.comp  rgb8_buffer_to_image.comp  rotate.comp  sand_add.comp  sand_add_bumpers.comp  sand_bottom_bump.comp  sand_clear.comp  sand_copy_stills.comp  sand_process.comp  sand_process_clear.comp  sand_to_image.comp  saturation.comp  short_buffer_to_image.comp  square.comp  whitebalance.comp  yuv420.comp
shaders/fullscreen/: fullscreen.frag  fullscreen.vert
shaders/include/: 709.h  srgb.h
shaders/output/: quantise_chroma_u.comp  quantise_chroma_v.comp  quantise_luma.comp  quantise_test.comp
shaders/particles/: particle.frag  particle.vert
src/: CMakeLists.txt  application.cpp  application.hpp  buffer.cpp  buffer.hpp  buffer_node.hpp  buffer_types.hpp  command_buffer.cpp  command_buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  console.cpp  console.hpp  cuda_ex.cpp  depth_helper.cpp  depth_helper.hpp  descriptor_layout.cpp  descriptor_layout.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_sets.hpp  device.cpp  device.hpp  engine_node.cpp  engine_node.hpp  engine_node_register.hpp  event.hpp  fence.cpp  fence.hpp  ffmpeg_init.cpp  ffmpeg_init.hpp  framebuffer.cpp  framebuffer.hpp  glbits.h  glerror.c  glerror.h  glexception.hpp  graph_exception.hpp  (+50 more)
src/compute/: CMakeLists.txt  bilateral.cpp  bilateral.hpp  cdl.cpp  cdl.hpp  colour_squares.cpp  colour_squares.hpp  constant.cpp  constant.hpp  crop.cpp  crop.hpp  custom.cpp  custom.hpp  exposure.cpp  exposure.hpp  ffmpeg_loop.cpp  ffmpeg_loop.hpp  gaussian.cpp  gaussian.hpp  image_node.hpp  invert.cpp  invert.hpp  kernel.cpp  kernel.hpp  log_exp_image.cpp  log_exp_image.hpp  median.cpp  median.hpp  merge.cpp  merge.hpp  particles.cpp  particles.hpp  rotate.cpp  rotate.hpp  sand.cpp  sand.hpp  saturation.cpp  saturation.hpp  single_kernel.cpp  single_kernel.hpp  (+2 more)
src/graph/: fake_node.cpp  fake_node.hpp  graph.cpp  graph.hpp
src/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui_draw.cpp  imgui_widgets.cpp
src/inputs/: CMakeLists.txt  blockedit.cpp  blockedit.hpp  exr.cpp  exr.hpp  ffmpeg.cpp  ffmpeg.hpp  image_uploader.cpp  image_uploader.hpp  raw.cpp  raw.hpp  sane.cpp  sane.hpp
src/inputs/sane/: CMakeLists.txt  sane_formats.hpp  sane_service.cpp  sane_service.hpp  sane_wrapper.cpp  sane_wrapper.hpp
src/memory/: CMakeLists.txt  memory_manager.cpp  memory_manager.hpp  memory_pool.cpp  memory_pool.hpp
src/ocio/: CMakeLists.txt  ocio.comp  ocio.cpp  ocio.hpp  ocio_functional.cpp  ocio_functional.hpp  ocio_static.cpp  ocio_static.hpp
src/outputs/: CMakeLists.txt  async_image_output.cpp  async_image_output.hpp  download.cpp  download.hpp  exr.cpp  exr.hpp  ffmpeg.cpp  ffmpeg.hpp  image_downloader.cpp  image_downloader.hpp  immediate_exr.cpp  immediate_exr.hpp
src/render/: camera.hpp  draw_fullscreen.cpp  draw_fullscreen.hpp  draw_particles.cpp  draw_particles.hpp  draw_triangle.cpp  draw_triangle.hpp  draw_ui.cpp  draw_ui.hpp
src/services/: CMakeLists.txt  graph_requests.cpp  graph_requests.hpp
src/ui/: CMakeLists.txt  bin.cpp  bin.hpp  console_window.cpp  console_window.hpp  inspector.cpp  inspector.hpp  main_ui.cpp  main_ui.hpp  memory_window.cpp  memory_window.hpp  node_window.cpp  node_window.hpp  nodes.cpp  nodes.hpp  performance.cpp  performance.hpp  photo_browser.cpp  photo_browser.hpp  preferences.cpp  preferences.hpp  render_window.cpp  render_window.hpp  timeline.cpp  timeline.hpp
tests/: CMakeLists.txt  load_save.cpp  test_console.cpp  test_ocio.cpp
textures/: CMakeLists.txt
